[package]
name = "ddsketchy"
version = "0.1.6"
authors = ["Patrick McGleenon"]
edition = "2021"
rust-version = "1.86.0"
description = "DD Sketch in Rust"
license = "Apache-2.0 OR MIT"
categories = ["data-structures", "algorithms"]
exclude = [".github"]
repository = "https://github.com/pmcgleenon/ddsketchy"
documentation = "https://docs.rs/ddsketchy"
keywords = ["ddsketch", "sketch", "data-structure"]

[[bench]]
name = "ddsketchy_bench"
harness = false

[[bench]]
name = "ddsketch_bench"
harness = false

[[example]]
name = "readme_example"

[[example]]
name = "compare_serialization"
required-features = ["serde"]

[[example]]
name = "readme_serde_example"
required-features = ["serde"]


[dependencies]
# Optional serialization support
serde = { version = "1.0", optional = true, features = ["derive"] }

# Optional Python bindings
pyo3 = { version = "0.29", optional = true, features = ["abi3-py39", "extension-module", "experimental-inspect"] }

# Numpy support for zero-copy array access
numpy = { version = "0.29", optional = true }

# Binary serialization for Python bindings
bincode = { version = "1.3", optional = true }

# No other runtime dependencies - core DDSketch is dependency-free

[dev-dependencies]
rand = "0.10"
rand_distr = "0.6"
criterion = "0.8"
approx = "0.5"
# existing Go-port implementation for comparison
sketches-ddsketch = "0.4"
# For serialization testing
serde_json = "1.0"
bincode = "1.3"

[features]
default = []
# Enable serialization support with serde
serde = ["dep:serde"]
# Enable Python bindings (automatically enables serde, bincode, and numpy)
python = ["dep:pyo3", "serde", "dep:bincode", "dep:numpy"]

[lib]
name = "ddsketchy"
crate-type = ["cdylib", "rlib"]

[profile.release]
#debug = true
#opt-level = 0
